cmake_minimum_required(VERSION 3.22)
project(USTHC_y2_labwork_01_e1)
project(USTHC_y2_labwork_01_e2)
project(USTHC_y2_labwork_01_e3)
project(USTHC_y2_labwork_02_e1)
project(USTHC_y2_labwork_02_e2)
project(USTHC_y2_labwork_02_e3)
project(USTHC_y2_labwork_02_e4)
project(USTHC_y2_labwork_02_e5)

set(CMAKE_CXX_STANDARD 23)

add_executable(USTHC_y2_labwork_01_e3 01/ex3.cpp)
add_executable(USTHC_y2_labwork_01_e2 01/ex2.cpp)
add_executable(USTHC_y2_labwork_01_e1 01/ex1.cpp)
add_executable(USTHC_y2_labwork_02_e1 02/complex.cpp)
add_executable(USTHC_y2_labwork_02_e2 02/list.cpp)
add_executable(USTHC_y2_labwork_02_e3 02/dynamicList.cpp)
add_executable(USTHC_y2_labwork_02_e4 02/linkedList.cpp)
add_executable(USTHC_y2_labwork_02_e5 02/polynomial.cpp)