cmake_minimum_required(VERSION 3.22)
project(USTHC_y2_labwork_01_e1)
project(USTHC_y2_labwork_01_e2)
project(USTHC_y2_labwork_01_e3)
project(USTHC_y2_labwork_02_e1)
project(USTHC_y2_labwork_02_e2)
project(USTHC_y2_labwork_02_e3)
project(USTHC_y2_labwork_02_e4)
project(USTHC_y2_labwork_02_e5)
project(USTHC_y2_labwork_02_e6)
project(USTHC_y2_labwork_02_e7)
project(USTHC_y2_labwork_02_e8)
project(USTHC_y2_labwork_03_e1)
project(USTHC_y2_labwork_03_e2)
project(USTHC_y2_labwork_03_e3)
project(USTHC_y2_labwork_03_e4)
project(USTHC_y2_labwork_03_e5)
project(USTHC_y2_labwork_03_e6)
project(USTHC_y2_labwork_03_e7)
project(USTHC_y2_labwork_03_e8)


set(CMAKE_CXX_STANDARD 23)

add_executable(USTHC_y2_labwork_01_e3 01/ex3.cpp)
add_executable(USTHC_y2_labwork_01_e2 01/ex2.cpp)
add_executable(USTHC_y2_labwork_01_e1 01/ex1.cpp test.cpp)
add_executable(USTHC_y2_labwork_02_e1 02/complex.cpp 02/ex2.c)
add_executable(USTHC_y2_labwork_02_e2 02/list.cpp)
add_executable(USTHC_y2_labwork_02_e3 02/dynamicList.cpp)
add_executable(USTHC_y2_labwork_02_e4 02/linkedList.cpp)
add_executable(USTHC_y2_labwork_02_e5 02/polynomial.cpp)
add_executable(USTHC_y2_labwork_02_e6 02/ex1.c)
add_executable(USTHC_y2_labwork_02_e7 02/ex2.c)
add_executable(USTHC_y2_labwork_02_e8 test.cpp)
add_executable(USTHC_y2_labwork_03_e1 03/staticStack.cpp)
add_executable(USTHC_y2_labwork_03_e2 03/dynamicStack.cpp)
add_executable(USTHC_y2_labwork_03_e3 03/linkedStack.cpp)
add_executable(USTHC_y2_labwork_03_e4 03/staticQueue.cpp)
add_executable(USTHC_y2_labwork_03_e5 03/dynamicQueue.cpp)
add_executable(USTHC_y2_labwork_03_e6 03/linkedQueue.cpp)
add_executable(USTHC_y2_labwork_03_e7 03/EX1.cpp)
add_executable(USTHC_y2_labwork_03_e8 03/EX2.cpp)
